--- a/src/Views/onboarding_form.twig
+++ b/src/Views/onboarding_form.twig
@@ -41,7 +41,7 @@
                 </a>
             </div>
             <p class="text-secondary">
-              If you need help, please <a href="#">contact us</a>.
+              If you need help, please <a href="mailto:{{ support_email }}">contact us</a>.
             </p>
           </div>
         </div>
